--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Essetielle",
-  "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "name": "Essentielle",
+  "version": "0.1",
+  "description": "Final project for Essentielle beauty salon",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
@@ -9,14 +9,13 @@
   "repository": "https://github.com/Radgris/Essentielle",
   "keywords": [
     "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
+    "librado",
+    "ESsentiellet",
+    "final"
   ],
-  "author": "GitHub",
+  "author": "QoL",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "~1.7.8"
+    "electron": "~1.4.13"
   }
 } 
